--- a/src/main/resources/org/example/oopbtl1/ArkanoidGame-view.fxml
+++ b/src/main/resources/org/example/oopbtl1/ArkanoidGame-view.fxml
@@ -17,5 +17,11 @@
                 <Label fx:id="gameTitle" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="Arkanoid" />
                 <Button fx:id="startButton" layoutX="299.0" layoutY="228.0" mnemonicParsing="false" onAction="#onClickButtonStart" text="Start" />
             </children></Pane>
+        <Pane fx:id="EndGame" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Label fx:id="GameOverLable" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="Game Over" />
+                <Label fx:id="WinLable" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="You Win" />
+                <Button fx:id="restartButton" layoutX="299.0" layoutY="228.0" mnemonicParsing="false" onAction="#onClickButtonStart" text="Restart" />
+            </children></Pane>
     </children>
 </AnchorPane>
