--- a/src/main/resources/org/example/oopbtl1/ArkanoidGame-view.fxml
+++ b/src/main/resources/org/example/oopbtl1/ArkanoidGame-view.fxml
@@ -2,11 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.oopbtl1.GameManager">
     <children>
+      <ImageView fitHeight="480.0" fitWidth="640.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@image/background.png" />
+         </image>
+      </ImageView>
         <Pane fx:id="gamePane" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <Button fx:id="homeButton" layoutX="558.0" layoutY="14.0" mnemonicParsing="false" onAction="#onClickButtonHome" text="Home" />
@@ -30,6 +37,11 @@
         </Pane>
         <Pane fx:id="setting" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
             <children>
+            <ImageView fitHeight="380.0" fitWidth="540.0" pickOnBounds="true">
+               <image>
+                  <Image url="@image/backgroundSetting.png" />
+               </image>
+            </ImageView>
                 <Button fx:id="level1Button" layoutX="20.0" layoutY="40.0" mnemonicParsing="false" onAction="#onClickButtonLevel1" text="Level1" />
                 <Button fx:id="level2Button" layoutX="80.0" layoutY="40.0" mnemonicParsing="false" onAction="#onClickButtonLevel2" text="Level2" />
                 <Button fx:id="level3Button" layoutX="140.0" layoutY="40.0" mnemonicParsing="false" onAction="#onClickButtonLevel3" text="Level3" />
