--- a/src/main/resources/org/example/oopbtl1/ArkanoidGame-view.fxml
+++ b/src/main/resources/org/example/oopbtl1/ArkanoidGame-view.fxml
@@ -32,7 +32,7 @@
             <children>
                 <Label fx:id="gameTitle" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="Arkanoid" />
                 <Button fx:id="startButton" layoutX="299.0" layoutY="228.0" mnemonicParsing="false" onAction="#onClickButtonStart" text="Start" />
-                <Button fx:id="settingButton" layoutX="299.0" layoutY="268.0" mnemonicParsing="false" onAction="#onClickButtonSetting" text="Setting" />
+                <Button fx:id="settingButton" layoutX="293.0" layoutY="268.0" mnemonicParsing="false" onAction="#onClickButtonSetting" text="Setting" />
 
             </children>
         </Pane>
@@ -41,6 +41,7 @@
                 <Label fx:id="GameOverLable" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="Game Over" />
                 <Label fx:id="WinLable" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="You Win" />
                 <Button fx:id="restartButton" layoutX="299.0" layoutY="228.0" mnemonicParsing="false" onAction="#onClickButtonStart" text="Restart" />
+                <Button fx:id="nextLevelButton" layoutX="293.0" layoutY="268.0" mnemonicParsing="false" onAction="#onClickNextLevelButton" text="Next Level" />
             </children>
         </Pane>
         <Pane fx:id="setting" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
