--- a/src/main/resources/org/example/oopbtl1/ArkanoidGame-view.fxml
+++ b/src/main/resources/org/example/oopbtl1/ArkanoidGame-view.fxml
@@ -19,7 +19,7 @@
         <Pane fx:id="gamePane" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <Button fx:id="homeButton" layoutX="558.0" layoutY="14.0" mnemonicParsing="false" onAction="#onClickButtonHome" text="Home" />
-                <Label fx:id="scoreLable" layoutX="46.0" layoutY="18.0" text="Score" textFill="#961212">
+                <Label fx:id="scoreLable" layoutX="46.0" layoutY="18.0" text="Score" textFill="#ff0d00">
                <font>
                   <Font size="18.0" />
                </font></Label>
@@ -30,7 +30,7 @@
         </Pane>
         <Pane fx:id="Menu" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Label fx:id="gameTitle" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="Arkanoid" />
+                <Label fx:id="gameTitle" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="Arkanoid" textFill="#d0ff00" />
                 <Button fx:id="startButton" layoutX="299.0" layoutY="228.0" mnemonicParsing="false" onAction="#onClickButtonStart" text="Start" />
                 <Button fx:id="settingButton" layoutX="293.0" layoutY="268.0" mnemonicParsing="false" onAction="#onClickButtonSetting" text="Setting" />
 
@@ -38,8 +38,8 @@
         </Pane>
         <Pane fx:id="EndGame" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Label fx:id="GameOverLable" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="Game Over" />
-                <Label fx:id="WinLable" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="You Win" />
+                <Label fx:id="GameOverLable" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="Game Over" textFill="#ff1e00" />
+                <Label fx:id="WinLable" layoutX="296.0" layoutY="118.0" scaleX="4.0" scaleY="4.0" scaleZ="4.0" text="You Win" textFill="#e5ff00" />
                 <Button fx:id="restartButton" layoutX="299.0" layoutY="228.0" mnemonicParsing="false" onAction="#onClickButtonStart" text="Restart" />
                 <Button fx:id="nextLevelButton" layoutX="293.0" layoutY="268.0" mnemonicParsing="false" onAction="#onClickNextLevelButton" text="Next Level" />
             </children>
